<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_store_configuration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.demahum.linuxutilities.store_configuration">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/store_configuration_username"
            android:ems="10"
            android:id="@+id/username"
            android:textAlignment="center"
            android:layout_above="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/store_configuration_port"
            android:ems="10"
            android:id="@+id/port"
            android:textAlignment="center"
            android:layout_above="@+id/username"
            android:layout_alignLeft="@+id/username"
            android:layout_alignStart="@+id/username" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/store_configuration_host_ip"
            android:ems="10"
            android:id="@+id/host_ip"
            android:textAlignment="center"
            android:layout_above="@+id/port"
            android:layout_alignLeft="@+id/port"
            android:layout_alignStart="@+id/port" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/store_configuration_conf_name"
            android:layout_above="@+id/port"
            android:layout_alignLeft="@+id/host_ip"
            android:layout_alignStart="@+id/host_ip"
            android:layout_marginBottom="41dp"
            android:id="@+id/confName"
            android:textAlignment="center" />

        <Button
            android:hint="@string/store_configuration_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:layout_marginBottom="108dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/store_configuration_password"
            android:textAlignment="center"
            android:layout_marginBottom="19dp"
            android:layout_above="@+id/saveButton"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>



</android.support.v4.widget.DrawerLayout>
